--- a/index.html
+++ b/index.html
@@ -9,30 +9,25 @@
 <body>
   <div class="page">
 
-    <header class="header">
+    <header class="header page__header">
       <img class="header__logo" src="images/__logo.png" alt="логотип">
-      <ul class="header__lang-link">
-        <li class="header__lang-link">
-          <input class="header__lang-link" id="ru" type="radio" name="lang" checked>
-          <label class="header__lang-link" for="ru">Ru</label>
-        </li>
-        <li class="header__lang-link">
-          <input class="header__lang-link" id="en" type="radio" name="lang"/>
-          <label class="header__lang-link" for="en">En</label>
-        </li>
+      <ul class="header__lang-links">
+        <li class="header__lang-link-item">
+          <a href="" class="header__lang-link">Ru</a>
+        <li class="header__lang-link-item">
+          <a href="" class="header__lang-link header__lang-link_disabled">En</a>
       </ul>
 
     </header>
-
+<!--
     <main class="content">
 
-      <section class="lead">
+      <section class="lead content__lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <div class="lead__images">
-          <img src="images/__image.jpg" alt="Пассажир спит на боковой полке">
-          <p class="lead__caption">ваша полка — верхняя</p>
-        </div>
+        <img class="lead__images" src="images/__image.jpg" alt="Пассажир спит на боковой полке">
+        <p class="lead__caption">ваша полка — верхняя</p>
+
       </section>
 
       <section class="intro content__intro">
@@ -104,14 +99,14 @@
           <div>
           <p class="place__paragraph">
             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+            тайга,&nbsp;а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.
           </p>
           <p class="place__paragraph">
             Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке.
             Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
             Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной,
             а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает
-            сбываться с билетом в Мурманск.
+            сбываться с билетом в&nbsp;Мурманск.
           </p>
           </div>
         </div>
@@ -126,7 +121,7 @@
           <div>
           <p class="place__paragraph">
             Алтай — одно из красивейших мест в России.
-            В первую очередь из-за гор: если ехать вдоль хребта,
+            В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,
             вы увидите склоны, усыпанные соснами, горные реки и озёра.
             А если вы откроете в автомобиле окна,
             сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
@@ -149,12 +144,11 @@
           <img class="place__image" src="images/baykal.jpg" alt="Зимний Байкал. Пейзаж">
           <div>
           <p class="place__paragraph">
-            Всем известен Байкал как крупнейшее озеро в мире.
-            Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+            Всем известен Байкал как крупнейшее озеро в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
           <p class="place__paragraph">
             Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
-            Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить
+            Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и тандем старается развить
             как можно бóльшую скорость на льду. В марте 2019 года
             на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
           </p>
@@ -175,9 +169,8 @@
               Зато здесь она вымахивает на 30 метров — леса карельских
               национальных парков из-за непроходимых болот никогда не знали топора.
               Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
-              видевшему солнце раньше, чем увидал его Иван Грозный.
-              В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-              в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+              видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+              в&nbsp;паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
         </div>
@@ -191,6 +184,7 @@
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
         </a>
+      </section>
 
     </main>
 
@@ -199,24 +193,24 @@
         <ul class="footer__links">
           <li class="footer__link">
             <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-          </li>
+
           <li class="footer__link">
             <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-          </li>
+
           <li class="footer__link">
             <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-          </li>
+
           <li class="footer__link">
             <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-          </li>
+
           <li class="footer__link">
             <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
-          </li>
+
         </ul>
       </nav>
       <p class="footer__copyright">© 2021 Александр Ильин</p>
 
-    </footer>
+    </footer>-->
 
   </div>
 
