--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
       </ul>
 
     </header>
-<!--
+
     <main class="content">
 
       <section class="lead content__lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__images" src="images/__image.jpg" alt="Пассажир спит на боковой полке">
+
+          <img class="lead__images"src="images/lead-polka.jpg" alt="Пассажир спит на боковой полке">
+
         <p class="lead__caption">ваша полка — верхняя</p>
 
       </section>
-
+<!--
       <section class="intro content__intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">
@@ -184,11 +186,11 @@
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
         </a>
-      </section>
+      </section>-->
 
     </main>
 
-    <footer class="footer page__footer">
+    <!--<footer class="footer page__footer">
       <nav>
         <ul class="footer__links">
           <li class="footer__link">
