--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
           <li>Аэропортов <span class="intro__list-accent">241</span></li>
         </ul>
       </section>
-<!--
+
 
       <section class="photo-grid content__photo-grid">
-        <img class="photo-grid__item" src="images/1.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/2.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/3.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/4.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/5.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/6.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/7.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/8.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/9.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/10.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/11.jpg" alt="пейзаж">
-        <img class="photo-grid__item" src="images/12.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="пейзаж">
+        <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="пейзаж">
       </section>
-
+<!--
       <section class="places">
 
         <div class="place places__place">
