--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="pages/index.css">
     <title>RUSSIAN-TRAVEL</title>
 </head>
 <body>
   <div class="page">
 
-    <header class="header page__header">
-      <img class="header__logo" src="images/__logo.png" alt="логотип">
-      <ul class="header__lang-links">
-        <li class="header__lang-link-item">
-          <a href="" class="header__lang-link">Ru</a>
-        <li class="header__lang-link-item">
-          <a href="" class="header__lang-link header__lang-link_disabled">En</a>
-      </ul>
-
+    <header class="header">
+        <img class="header__logo" src="images/__logo.png" alt="логотип">
+        <ul class="header__lang-links">
+          <li class="header__lang-link-item">
+            <a href="" class="header__lang-link">Ru</a>
+          <li class="header__lang-link-item">
+            <a href="" class="header__lang-link header__lang-link_disabled">En</a>
+        </ul>
     </header>
 
     <main class="content">
 
-      <section class="lead content__lead">
+      <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <p class="lead__subtitle">Настоящая страна не в выпусках
+          новостей, а здесь.</p>
 
           <img class="lead__image" src="images/lead-polka.jpg" alt="Пассажир спит на боковой полке">
 
@@ -32,7 +32,7 @@
 
       </section>
 
-      <section class="intro content__intro">
+      <section class="intro">
         <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
@@ -53,7 +53,7 @@
       </section>
 
 
-      <section class="photo-grid content__photo-grid">
+      <section class="photo-grid">
         <ul class="photo-grid__list">
           <li>
             <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="пейзаж">
@@ -82,7 +82,7 @@
         </ul>
       </section>
 
-      <section class="places content__places">
+      <section class="places">
 
         <ul class="places__list">
           <li class="place places__place">
@@ -195,7 +195,7 @@
         </ul>
       </section>
 
-      <section class="cover content__cover">
+      <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__item" target="_blank">
           <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы
@@ -207,7 +207,7 @@
 
     </main>
 
-    <footer class="footer page__footer">
+    <footer class="footer">
       <nav>
         <ul class="footer__links">
           <li class="footer__link-item">
@@ -228,7 +228,6 @@
         </ul>
       </nav>
       <p class="footer__copyright">&copy; 2021 Александр Ильин</p>
-
     </footer>
 
   </div>
