--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="lead__subtitle">Настоящая страна не в выпусках
           новостей, а здесь.</p>
 
-          <img class="lead__image" src="images/lead-polka.jpg" alt="Пассажир спит на боковой полке">
+          <img class="lead__image" src="images/lead-polka.jpg" alt="Пассажир спит в поезде">
 
         <p class="lead__caption">ваша полка — верхняя</p>
 
@@ -86,7 +86,7 @@
 
         <ul class="places__list">
           <li class="place places__place">
-            <h2 class="place__title place__title_adaptive-width">Куршская коса</h2>
+            <h2 class="place__title place__title_adaptive_width">Куршская коса</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
