--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <p class="lead__subtitle">Настоящая страна не в выпусках
           новостей, а здесь.</p>
 
-          <img class="lead__image" src="images/lead-polka.jpg" alt="Пассажир спит в поезде">
-
+          <picture>
+            <source srcset="images/lead-polka-768.jpg" media="(max-width: 768px)">
+            <img class="lead__image" src="images/lead-polka.jpg" alt="Пассажир спит в поезде">
+          </picture>
         <p class="lead__caption">ваша полка — верхняя</p>
 
       </section>
