--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <ul class="header__lang-links">
           <li class="header__lang-link-item">
             <a href="" class="header__lang-link">Ru</a>
-          <li class="header__lang-link-item">
-            <a href="" class="header__lang-link header__lang-link_disabled">En</a>
+          </li><li class="header__lang-link-item">
+            <a href="" class="header__lang-link header__lang-link_disabled">En</a></li>
         </ul>
     </header>
 
@@ -59,28 +59,29 @@
         <ul class="photo-grid__list">
           <li>
             <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="пейзаж">
-          <li>
+          </li><li>
             <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="пейзаж">
+          </li>
         </ul>
       </section>
 
@@ -218,15 +219,15 @@
           <li class="footer__link-item">
             <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
 
-          <li class="footer__link-item">
+          </li><li class="footer__link-item">
             <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
 
-          <li class="footer__link-item">
+          </li><li class="footer__link-item">
             <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
 
-          <li class="footer__link-item">
+          </li><li class="footer__link-item">
             <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
-
+          </li>
         </ul>
       </nav>
       <p class="footer__copyright">&copy; 2021 Александр Ильин</p>
