--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <li class="footer__link-item">
             <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
 
-          <li class="footer__link-item">
+          </li><li class="footer__link-item">
             <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
 
           </li><li class="footer__link-item">
