--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="pages/index.css">
-    <title>Путешествие по России</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="pages/index.css">
+  <title>Путешествие по России</title>
 </head>
+
 <body>
   <div class="page">
 
     <header class="header">
-        <img class="header__logo" src="images/__logo.png" alt="Контур Российской Федерации и надпись Россия. Логотип.">
-        <ul class="header__lang-links">
-          <li class="header__lang-link-item">
-            <a href="" class="header__lang-link header__lang-link_active">Ru</a>
-          </li>
-          <li class="header__lang-link-item">
-            <a href="" class="header__lang-link">En</a>
-          </li>
-        </ul>
+      <img class="header__logo" src="images/header-logo1.svg" alt="Контур Российской Федерации и надпись Россия. Логотип.">
+      <ul class="header__lang-links">
+        <li class="header__lang-link-item">
+          <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+        </li>
+        <li class="header__lang-link-item">
+          <a href="#" class="header__lang-link">En</a>
+        </li>
+      </ul>
     </header>
 
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-        <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках
-          новостей, а&nbsp;здесь.</p>
-        <picture>
-          <source srcset="images/lead-polka-768.jpg" media="(max-width: 768px)">
-          <img class="lead__image" src="images/lead-polka.jpg" alt="Пассажир спит в поезде">
-        </picture>
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
+        <figure class="lead__image-wrapper">
+          <picture>
+            <source srcset="images/lead-polka-768.jpg" media="(max-width: 768px)">
+            <img class="lead__image" src="images/lead-polka.jpg" alt="Пассажир спит в поезде">
+          </picture>
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </section>
 
       <section class="intro">
         <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
         <p class="intro__text">
-          По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют
-          провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле,
-          Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми
-          льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету,
-          загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама,
-          которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч
-          километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.
+          По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым
+          морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая
+          мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
           <li class="intro__list-item"><span class="intro__span-accent">Часовых поясов </span>11</li>
@@ -105,16 +104,11 @@
             </div>
             <img class="place__image" src="images/kurshakaya-kosa.jpg" alt="Куршская коса. Пейзаж">
             <div>
-              <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн,
-                вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского
-                залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой.
-                Уникальная природная зона на&nbsp;краю российского анклава.
+              <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона
+                на&nbsp;краю российского анклава.
               </p>
-              <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
-                и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная
-                точка России, Балтийская&nbsp;коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших
-                приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
-                природы и&nbsp;запах стального, прохладного моря.
+              <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская&nbsp;коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи
+                небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.
               </p>
             </div>
           </li>
@@ -128,15 +122,11 @@
             <img class="place__image" src="images/kolskiy.jpg" alt="Кольский полуостров. Пейзаж">
             <div>
               <p class="place__paragraph">
-                Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг &mdash;
-                тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
+                Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг &mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
               </p>
               <p class="place__paragraph">
-                Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке.
-                Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии.
-                Возможно, вы не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной,
-                а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает
-                сбываться с&nbsp;билетом в&nbsp;Мурманск.
+                Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы не&nbsp;интересовались
+                пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.
               </p>
             </div>
           </li>
@@ -150,17 +140,12 @@
             <img class="place__image" src="images/altay.jpg" alt="Алтай. Пейзаж">
             <div>
               <p class="place__paragraph">
-                Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
-                В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,
-                вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра.
-                А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна,
-                сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.
+                Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете
+                познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.
               </p>
               <p class="place__paragraph">
-                Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом.
-                Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси,
-                над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули.
-                И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.
+                Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые
+                манулы&nbsp;&mdash; тоже обитатели Алтайского края.
               </p>
             </div>
           </li>
@@ -174,14 +159,11 @@
             <img class="place__image" src="images/baykal.jpg" alt="Зимний Байкал. Пейзаж">
             <div>
               <p class="place__paragraph">
-                Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают,
-                что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
+                Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
               </p>
               <p class="place__paragraph">
-                Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу.
-                Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить
-                как&nbsp;можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года
-                на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+                Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как&nbsp;можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте
+                2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
               </p>
             </div>
           </li>
@@ -195,13 +177,9 @@
             <img class="place__image" src="images/karelia.jpg" alt="Карелия. Пейзаж">
             <div>
               <p class="place__paragraph">
-                Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу
-                сибирская лиственница не&nbsp;растёт западнее Водлозера.
-                Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских
-                национальных парков из-за непроходимых болот никогда не&nbsp;знали топора.
-                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу,
-                видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья
-                в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+                Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых
+                болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь
+                тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
               </p>
             </div>
           </li>
@@ -211,8 +189,7 @@
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__item" target="_blank">
           <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе &mdash;&nbsp;путешествие
-            от&nbsp;столицы&nbsp;до&nbsp;Байкала на&nbsp;электричках.
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе &mdash;&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на&nbsp;электричках.
           </p>
         </a>
       </section>
@@ -245,4 +222,5 @@
   </div>
 
 </body>
+
 </html>
